# reliably

./: .gitignore  Cargo.toml  README.md
examples/: encrypt.rs  history.rs  publish.rs
src/: auth.rs  connection.rs  crypto.rs  error.rs  lib.rs  options.rs  protocol.rs  realtime.rs  realtime_channel.rs  realtime_presence.rs  rest.rs  transport.rs
