[package]
name = "reliably"
version = "0.3.1"
edition = "2021"
description = "A fully-featured real-time Rust client for Ably"
documentation = "https://docs.rs/reliably"
readme = "README.md"
repository = "https://github.com/Ogyeet10/reliably"
license = "Apache-2.0"
keywords = ["ably", "reliably", "realtime", "pubsub"]

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*",
]

[dependencies]
aes = "0.8.1"
base64 = "0.22.1"
block-modes = "0.9.1"
cipher = "0.4.3"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
hmac = "0.12.1"
lazy_static = "1.4.0"
mime = "0.3.16"
rand = "0.9"
regex = "1.5.5"
reqwest = { version = "0.13.2", features = ["json", "query", "native-tls"] }
rmp-serde = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_bytes = "0.11.6"
serde_json = "1.0.81"
serde_repr = "0.1.8"
sha2 = "0.10.2"
url = "2.2.2"
cbc = "0.1.2"
num-traits = "0.2.15"
num-derive = "0.4.2"
tokio = { version = "1.18.2", features = ["rt", "net", "time", "sync", "macros"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }

[dev-dependencies]
tokio = { version = "1.18.2", features = ["full"] }

[features]
native-tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]
rustls = ["reqwest/rustls", "tokio-tungstenite/__rustls-tls"]
default = ["native-tls"]
