[package]
name = "reliably"
version = "0.3.6"
edition = "2021"
description = "A fully-featured real-time Rust SDK for Ably pubsub"
documentation = "https://docs.rs/reliably"
readme = "README.md"
repository = "https://github.com/Ogyeet10/reliably"
license = "Apache-2.0"
keywords = ["ably", "realtime", "pubsub", "websocket", "sdk"]
categories = [
    "api-bindings",
    "network-programming",
    "web-programming::websocket",
    "asynchronous"
]
include = [
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/src/**",
]

[dependencies]
aes = "0.8"
base64 = "0.22"
cipher = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hmac = "0.12"
lazy_static = "1"
mime = "0.3"
rand = "0.9"
regex = "1"
reqwest = { version = "0.13", features = ["json", "query", "native-tls"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_repr = "0.1"
sha2 = "0.10"
url = "2"
cbc = "0.1"
num-traits = "0.2"
num-derive = "0.4"
tokio = { version = "1", features = ["rt", "net", "time", "sync", "macros"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
native-tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]
rustls = ["reqwest/rustls", "tokio-tungstenite/__rustls-tls"]
default = ["native-tls"]
